Gave the BLOCKQUOTE which surrounds file content the file-content CSS class and trimmed its margins a bit. Fixed the truncated-by-one file extension uses in the language-XYZ tag in non-line-numbered file content, caused by refactoring from this branch.
FossilOrigin-Name: 62b682bded84ebd86edae24693baab6a464911b4c69ac140af19685595dc9dec

--- a/src/default.css
+++ b/src/default.css
@@ -1268,3 +1268,8 @@ table.numbered-lines td.line-numbers span.selected-line.start.end {
   border-style: dotted;
   border-color: rgb( 127, 127, 127, 0.5 );
 }
+
+blockquote.file-content {
+  /* file content block in the /file page */
+  margin: 1em 2em;
+}
